--- a/structure_sample/pubspec.yaml
+++ b/structure_sample/pubspec.yaml
@@ -24,10 +24,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  json_annotation: ^2.4.0
+  dio: ^2.1.7
+  bloc_provider: ^0.6.2+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  # parse [object <-> json] using `flutter packages pub run build_runner build`
+  build_runner: ^1.5.0
+  json_serializable: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
